# lang2lang

./: .gitignore  .gitmodules  README.md  setup.ps1  setup.sh
src/cpp/: CMakeLists.txt
src/cpp/include/: socketClient.cpp  socketClient.h  socketCore.cpp  socketCore.h  socketServer.cpp  socketServer.h
src/cpp/src/: client.cpp  server.cpp
src/cs/client/: client.cs
src/cs/server/: server.cs
src/python/scripts/: client.py  server.py
